# pipelinewise-singer-python

./: CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  pylintrc  pyproject.toml  setup.py  tox.ini
.github/workflows/: main.yml  pythonpublish.yml
singer/: __init__.py  bookmarks.py  catalog.py  logger.py  messages.py  metadata.py  metrics.py  requests.py  schema.py  statediff.py  transform.py  utils.py
tests/: test_bookmarks.py  test_catalog.py  test_metadata.py  test_metrics.py  test_schema.py  test_singer.py  test_statediff.py  test_transform.py  test_utils.py
