[tool.poetry]
name = "realit-singer-python"
version = "5.0.3"
description = "Singer.io utility library - PipelineWise and Meltano compatible"
authors = []
license = "Apache 2.0"
readme = "README.md"
homepage = "https://github.com/s7clarke10/realit-singer-python"
repository = "https://github.com/s7clarke10/realit-singer-python"
keywords = ["singer", "meltano", "pipelinewise", "framework"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    # Specify the Python versions you support here.
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Development Status :: 5 - Production/Stable", "Topic :: Database"
]
packages = [
    { include = "singer" }
]
include = [
    { path = "singer/logging.conf", format = ["sdist", "wheel"] }
]


[tool.poetry.dependencies]
python = ">=3.8,<3.13"
pytz = ">=2018.4,<2025.0"
jsonschema = "^4.23.0"
msgspec = "^0.18.0"
python-dateutil = "^2.7.3"
backoff = "2.2.1"
ciso8601 = "^2.3.1"

[tool.poetry.dev-dependencies]
types-pytz = "^2024.1.0.20240417"
types-python-dateutil = "^2.9.0.20240316"
pylint = "3.2.6"
pytest = "8.*"
coverage = ">= 6.3, < 8.0"
ipython = "^8.12.1"
ipdb = "^0.13.13"
unify = "^0.5"
tox = "^4.17.1"
flake8 = { version = "^7.1.1", python = ">=3.8.1" }
black = "^24.8.0"
pydocstyle = "^6.3.0"
mypy = "^1.11.1"
isort = "^5.13.2"

[tool.black]
line-length = 120

[tool.coverage.paths]
source = ["singer"]

[tool.coverage.run]
branch = true
source = ["singer"]

[tool.coverage.report]
fail_under = 76.0

[tool.isort]
profile = "black"
multi_line_output = 3
src_paths = "singer"
use_parentheses = true
known_first_party = "singer"
include_trailing_comma = true
add_imports = [
    "from __future__ import annotations",
]

[tool.pytest.ini_options]
addopts = "-v --doctest-modules"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
realit-singer-python = "realit_singer_python.__init__:main"